--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,7 +1,14 @@
 .cart-container {
   padding: 2rem;
 }
-
+.cart-container p{
+  text-align: center;
+  color: black;
+  margin-top: 20px;
+  font-size: 20px;
+  font-weight: 600;
+  border: 2px solid blue;
+}
 .cart-items {
   display: flex;
   flex-direction: column;
