--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,9 @@
 .cart-container {
-  padding: 2rem;
+  padding: 1rem;
+  margin-left: 30%;
+  width: 600px;
+  height: 200px;
+  margin-top: 80px;
 }
 .cart-container p{
   text-align: center;
@@ -7,7 +11,6 @@
   margin-top: 20px;
   font-size: 20px;
   font-weight: 600;
-  border: 2px solid blue;
 }
 .cart-items {
   display: flex;
