--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -51,18 +51,21 @@
 }
 
 .delete-button {
-  background: #e74c3c;
-  color: white;
-  border: none;
-  padding: 0.5rem 0.8rem;
   border-radius: 4px;
-  cursor: pointer;
-  font-size: 0.9rem;
-  transition: background 0.2s ease;
+  border: 1px solid black;
+  background-color: rgb(234, 45, 45);
+  color:white;
+  padding: 10px 15px;
+  font-weight: 700;
+  border: none;
 }
 
 .delete-button:hover {
-  background: #c0392b;
+  color: white;
+  transition: .2s ease-in-out;
+  border-radius: 4px;
+  border: 1px solid white;
+  background-color: black;
 }
 
 .cart-total {
@@ -70,4 +73,22 @@
   margin-top: 1.5rem;
   font-size: 1.3rem;
   font-weight: bold;
+}
+.button p{
+  
+  border-radius: 4px;
+  border: 1px solid black;
+  background-color: white;
+  color: black;
+  padding: 8px 5px;
+
+}
+.button:hover p{
+  
+  border-radius: 4px;
+  border: 1px solid white;
+  background-color: black;
+  padding: 8px 5px;
+  color: white;
+  transition: .2s ease-in-out;
 }
